--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -8,14 +8,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-item>
+      <ion-label>ID</ion-label>
+      <ion-input [(ngModel)]="id"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>PW</ion-label>
+      <ion-input [(ngModel)]="pw"></ion-input>
+    </ion-item>
+    <ion-button expand="block" (click)="login()">로그인</ion-button>
   </div>
 </ion-content>
