--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,28 +2,31 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
-
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
+        
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons class="bottom-tab-bar">
+      <ion-button [routerLink]="['/main']" class="bottom-tab">
+        <ion-icon class="bottom-icon" name="home-outline"></ion-icon>
+      </ion-button>
+      <ion-button [routerLink]="['/picture']" class="bottom-tab">
+        <ion-icon class="bottom-icon" name="images-outline"></ion-icon>
+      </ion-button>
+      <ion-button [routerLink]="['/chat']" class="bottom-tab">
+        <ion-icon class="bottom-icon" name="chatbubbles-outline"></ion-icon>
+      </ion-button>
+      <ion-button [routerLink]="['/calendar']" class="bottom-tab">
+        <ion-icon class="bottom-icon" name="calendar-number-outline"></ion-icon>
+      </ion-button>
+      <ion-button [routerLink]="['/menu']" class="bottom-tab">
+        <ion-icon class="bottom-icon" name="ellipsis-horizontal-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
