--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+ion-header {
+  
+}
+
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
@@ -116,4 +120,29 @@ ion-note {
 
 ion-item.selected {
   --color: var(--ion-color-primary);
+}
+
+// 개발왕 영역
+
+ion-footer {
+  bottom: 0;
+  position: fixed;
+}
+
+.bottom-tab-bar {
+    width: 100%;
+    height: 100%;
+}
+
+.bottom-tab {
+    width: 25%;
+}
+
+.bottom-icon {
+    color: #fff;
+}
+
+.bottom-text {
+    margin-left: 10px;
+    font-size: 10px;
 }
